--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,199 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  display: block;
+  margin: 0;
+  background-color: #272727;
+  color: #ffffff;
+  font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* ----------
+FONT SIZES
+---------- */
+h1 { font-size: 2.5rem; }
+h2, button { font-size: 1.8rem; }
+h3 { font-size: 1.4rem; }
+h4, label { font-size: 1.3rem; }
+h5 { font-size: 1.1rem; }
+h6 { font-size: 1.1rem; }
+p,
+form,
+input { font-size: 1rem; }
+/* -----------
+FONT WEIGHTS
+---------- */
+h1 { font-weight: 600; }
+h2 { font-weight: 700; }
+h3 { font-weight: 600; }
+h4 { font-weight: 500; }
+h5 { font-weight: 700; }
+h6 { font-weight: 500; }
+/* -----------
+SPACING
+---------- */
+h3 {
+  margin-top: 1em;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+  margin: 0 auto;
+  width: 90%;
+}
+
+label {
+  display: block;
+  padding: 0.5em 0;
+}
+
+input { width: 50%; }
+label { width: 100%; }
+
+input {
+  height: 2em;
+  text-align: center;
+  border: none;
+  background-color: #4e4e4e;
+  color: #fff;
+}
+
+input:focus, input:active {
+  width: 70%;
+  outline: 1px solid #00ff22;
+  animation: input-glow 1s linear infinite;
+  transition: width 0.5s ease-in-out;
+}
+
+/* -----------
+BACKGROUND COLORS
+---------- */
+header { background-color: #0f0f0f; }
+/* -----------
+MENU RULES
+---------- */
+header { position: relative; }
+
+.menu {
+  position: absolute;
+  top: 0.1em;
+  right: 0.5em;
+  transform: rotate(90deg);
+}
+
+button {
+  margin: 2em auto;
+  padding: 0.5em;
+  width: 100%;
+  border: none;
+  background-color: #00ff22;
+  border-radius: 50px;
+}
+/* -----------
+TIMEDIFY BUTTON RULES
+---------- */
+article {
+  margin: 2em;
+  padding: 0.5em;
+  border-radius: 50px;
+}
+/* -----------
+FOOTER RULES
+---------- */
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  color: #272727;
+  border-top: 3px solid #4e4e4e;
+}
+/* -----------
+RADIO INPUT RULES
+---------- */
+[type='radio']:checked,
+[type='radio']:not(:checked) {
+  position: absolute;
+  left: -9999px;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+/* -----------
+PLAYLIST RADIO
+---------- */
+.playlist-for {
+  border-bottom: 1px solid #4e4e4e;
+  border-radius: 5px;
+}
+
+.playlist:checked + label {
+  background-color: #222222;
+  box-shadow:
+  -2px -1px 5px 1px #4e4e4e inset,
+  2px 1px 5px 1px #4e4e4e inset;
+}
+/* -----------
+COLORS RADIO
+---------- */
+.colors {
+  margin-top: 25px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  align-items: flex-end;
+}
+
+.color-for {
+  width: 50%;
+  height: 50%;
+}
+
+.color:checked + label {
+  width: calc(50% + 10px);
+  height: calc(50% + 10px);
+  transition: all 0.25s ease-in-out;
+  animation: dance 0.75s linear infinite;
+}
+
+@keyframes input-glow {
+  0% {
+    box-shadow: 0 0 1px 2px #0c7c1b;
+  }
+  50% {
+    box-shadow: 0 0 3px 2px #0c7c1b;
+  }
+}
+
+@keyframes dance {
+  0% {
+    transform: 
+      translate(1px, 1px)
+      rotate(10deg);
+  }
+  25% {
+    transform:
+      translate(-1px, 1px)
+      rotate(-6deg);
+  }
+  50% {
+    transform: 
+      translate(-1px, 1px)
+      rotate(8deg);
+  }
+  75% {
+    transform: 
+      translate(-1px, -1px)
+      rotate(-1deg);
+  }
+  100% {
+    transform: 
+      translate(1px, 1px)
+      rotate(10deg);
+  }
 }
