Style Timer wheel

--- a/src/index.css
+++ b/src/index.css
@@ -175,14 +175,27 @@ COLORS RADIO
   width: 4em;
   height: 4em;
   background-color: #4e4e4e;
-  border-radius: 5px;
+  border-width: 3px;
+  border-style: solid;
+  border-image:
+    linear-gradient(
+      to right,
+      #9cafaf,
+      rgb(214, 254, 255)
+    ) 2 10%;
+  /* border-radius: 7px; */
+  box-shadow:
+    inset 1px 1px 5px 1px #1f1f1fd2,
+    inset -1px -1px 5px 1px #1f1f1fd7,
+    0 0 2px 2px #949d9e;
   overflow: hidden;
+
 }
 
 .wheel { font-family: 'Envy Code R'; }
 .arrow {
-  color: #b3b3b3;
-  text-shadow: 1px solid #c2cc;
+  color: #949d9e;
+  text-shadow: 1px 1px 1px rgb(191, 219, 215);
 }
 .arrow:hover { cursor: pointer; }
 
