--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,6 @@ COLORS RADIO
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 25px;
 }
 
 .wheel-box {
@@ -174,27 +173,24 @@ COLORS RADIO
   align-items: center;
   width: 4em;
   height: 4em;
-  background-color: #4e4e4e;
-  border-width: 3px;
+  background-color: #0f0f0f;
+  border-width: 1px;
   border-style: solid;
   border-image:
     linear-gradient(
       to right,
-      #9cafaf,
-      rgb(214, 254, 255)
+      #3b3b3b,
+      rgb(161, 165, 165)
     ) 2 10%;
-  /* border-radius: 7px; */
-  box-shadow:
-    inset 1px 1px 5px 1px #1f1f1fd2,
-    inset -1px -1px 5px 1px #1f1f1fd7,
-    0 0 2px 2px #949d9e;
+  border-radius: 7px;
+  box-shadow: 0 0 2px 2px #202020;
   overflow: hidden;
 
 }
 
 .wheel { font-family: 'Envy Code R'; }
 .arrow {
-  color: #949d9e;
+  color: #4d4d4d;
   text-shadow: 1px 1px 1px rgb(191, 219, 215);
 }
 .arrow:hover { cursor: pointer; }
